--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
