--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,7 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
+    //"strictDomEventTypes": false,
     "strictInjectionParameters": true
   }
 }
