--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "4.1.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
