--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "bootstrap": "4.1.1",
+    "bootswatch": "^5.1.0",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^6.2.0",
+    "ngx-bootstrap": "^5.3.2",
+    "ngx-spinner": "^9.0.1",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
+    "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
