--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=ecomty.db"
+    "DefaultConnection": "Data source=ecomty.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
