End of Section 14

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
+    "uuid": "^3.4.0",
     "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.10.2"
   },
