--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0"/>
     <PackageReference Include="StackExchange.Redis" Version="2.2.62"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.12.1"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.1"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
