--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0"/>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.12.1"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.1"/>
+    <PackageReference Include="Stripe.net" Version="39.66.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
