--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -16,5 +16,5 @@
     "Key": "super secret key",
     "Issuer": "https:/localhost/5001"
   },
-  "ApiUrl": "https://localhost:5001/"
+  "ApiUrl": "https://localhost:5001/Content/"
 }
