--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <None Include="Data\SeedData\**" CopyToOutputDirectory="PreserveNewest" />
     <ProjectReference Include="..\Core\Core.csproj"/>
   </ItemGroup>
   <ItemGroup>
@@ -11,6 +12,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.12.1"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.1"/>
     <PackageReference Include="Stripe.net" Version="39.66.0"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
